# ynab-mcp-server

./: .gitignore  .trivyignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: pr-quality-gates.yml  test-claude-cli.yml
src/ynab_mcp_server/: __init__.py  api.py  models.py  server.py
